--- a/public/index.css
+++ b/public/index.css
@@ -9,11 +9,11 @@ body {
 }
 
 #topSpace {
-  height: 15%;
+  height: 12%;
 }
 
 #mainContainer {
-  overflow: hidden;
+  overflow: scroll;
   width: 100%;
   height: 100%;
   background-image: url("img/bg_hands.png");
@@ -73,6 +73,20 @@ a:visited {
 a:hover,a:focus {
 	color: black;
 	border-bottom:2px solid black;
+}
+
+@media (orientation: portrait) {
+  #topSpace {
+    height: 7%;
+  }
+
+  #LLLogo {
+    width: 75%;
+  }
+
+  #introText {
+    width: 75%;
+  }
 }
 
 @media only screen
